# TechnicalTask

./: CMakeLists.txt  READ.me  a.out  email  email.cpp  header.cpp  header.hpp  main.cpp
tests/: test.cpp
